--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
     <!-- Linking Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -21,27 +20,27 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-8">
-                <h3 class="text-center">Click a button below to view their cool GIFs!</h3>
+                <h3>Click a button below to view their cool GIFs!</h3>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-9" id="animalButtons"></div>
+            <div class="col-sm-9" id="gifButtons"></div>
             <div class="col-sm-3">
-                <form id="animalForm">
-                    <label for="animalInput">Create a new button by searching below:</label>
-                    <input class="form-control" type="text" id="animalInput">
-                    <button id="addAnimal" class="btn btn-primary btn-block button-submit" type="submit" value="Submit">Add</button>
+                <form id="gifForm">
+                    <label for="gifInput">Create a new button by searching here:</label>
+                    <input class="form-control" type="text" id="gifInput">
+                    <button id="addGif" class="btn btn-primary btn-block button-submit" type="submit" value="Submit">Add</button>
                 </form>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-9" id="animals">
+            <div class="col-sm-9" id="gifs">
             </div>
         </div>
     </div>
    
        <!-- Linking JS code -->
-  <script type="text/javascript" src="assets/javascript/app.js"></script>
+  <script type="text/javascript" src="assets/javascript.js"></script>
 </body>
 
 </html>
